[JBR17] store add opens in a format which is easy to copy/paste
GitOrigin-RevId: 775220b4420234b720b0299695c8a6630b672e66